Fri Jan  4 22:15:20 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:
        * tests/transport/error_handling/main.cpp:

          Fixed issues with intermittent test failures.

Fri Jan  4 22:12:33 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Clean up resources if a transport fails to configure.

Thu Jan  3 21:40:17 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tools/excelRTD/ExcelRTD.mpc:

          Skip this project when building with nmake makefiles.
          See the comment in the .mpc file for details.

Thu Jan  3 15:57:11 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Corrected initializer list order to fix warning.

Wed Jan  2 22:28:43 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:

          Fixed problems with shutting down objects in the wrong order.

        * NEWS:

          Added noteworthy changes for the upcoming release.

Wed Dec 26 19:54:04 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Copy the availableBuiltinEndpoints locally before releasing lock.

        * tests/DCPS/TopicReuse/rtps_disc.ini:
        * tests/DCPS/TopicReuse/run_test.pl:

          Cleaned up test script, use some shorter timeouts in config file.

Wed Dec 26 15:19:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Removed test "DomainParticipantId" which was not testing anything.

        * tests/DCPS/DomainParticipantId:

          Removed these files.

Wed Dec 26 15:04:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Fixed a compiler warning.

Fri Dec 21 19:52:01 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
